Finish search panel but not functions

--- a/JavaWeb3/src/main/resources/templates/main.html
+++ b/JavaWeb3/src/main/resources/templates/main.html
@@ -9,38 +9,71 @@
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 </head>
 <body>
-<div id="app" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">
-    <el-container id="main-panel">
-        <el-aside id="left-panel">
-            <el-header id="self-info">
-                <el-avatar class="avatar" :src="self.avatar" style="margin-top: 5px;"></el-avatar>
-                <label style="font-size: 30px">{{self.name}}</label>
-            </el-header>
-            <el-header id="search-bar">
-                <el-input v-model="search" placeholder="search for chat or history" style="width: 195px;"></el-input>
-                <el-button type="primary" icon="el-icon-search"></el-button>
-            </el-header>
-            <el-main id="chat-list-panel">
-                <single-chat v-on:click-id="showchat(chat.id)" v-for="chat in chatlist" v-bind:key="chat.id" :id="chat.id" :avatar="chat.avatar" :name="chat.name" :time="chat.time" :content="chat.content"></single-chat>
-            </el-main>
-        </el-aside>
-        <single-chat-panel v-for="chat in chatlist" v-on:send-message="text2($event, args)" v-bind:key="chat.id" :chat="chat" v-show="chat.show"></single-chat-panel>
-    </el-container>
+<div id="app">
+    <div id="main-panel">
+        <el-container>
+            <el-aside id="left-panel">
+                <el-header id="self-info">
+                    <el-avatar class="avatar" :src="self.avatar" style="margin-top: 5px;"></el-avatar>
+                    <label style="font-size: 30px;">{{self.name}}</label>
+                    <i id="add" class="el-icon-circle-plus-outline" @click="showSearchPanel"></i>
+                </el-header>
+                <el-header id="search-bar">
+                    <el-input v-model="search" placeholder="Search for history" style="width: 195px;"></el-input>
+                    <el-button icon="el-icon-search" type="primary" @click="searchHistory(searchField)"></el-button>
+                </el-header>
+                <el-main id="chat-list-panel">
+                    <single-chat v-on:click-id="showchat(chat.id)" v-for="chat in chatlist" v-bind:key="chat.id" :id="chat.id" :avatar="chat.avatar" :name="chat.name" :time="chat.time" :content="chat.content"></single-chat>
+                </el-main>
+            </el-aside>
+            <single-chat-panel v-for="chat in chatlist" v-on:send-message="text2($event, args)" v-bind:key="chat.id" :chat="chat" v-show="chat.show"></single-chat-panel>
+        </el-container>
+    </div>
+    <div v-show="searchUserForm.display">
+        <div id="mask"></div>
+        <div id="searchUserPanel">
+            <el-input v-model="searchUserForm.searchField" placeholder="Please input user name" style="margin-left: 160px; margin-top: 50px; width: 400px;"></el-input>
+            <el-button icon="el-icon-search" type="primary" @click="searchUsers(searchField)"></el-button>
+            <div id="searchResults">
+                <label>Search results are as follows:</label>
+                <single-user-info @chat="chatwith(userdata.username)" class="single-user-info" v-for="userdata in searchUserForm.usersdata" :username="userdata.username" :email="userdata.email" :isloggedin="userdata.isLoggedIn"></single-user-info>
+            </div>
+            <el-button style="margin-left: 350px; margin-top: 10px;" @click="closeSearchPanel">Cancel</button>
+        </div>
+    </div>
 </div>
 </body>
 
 <script>
-    Vue.component('single-chat', {
-        props: ['id', 'avatar', 'name', 'time', 'content'],
+    Vue.component('single-user-info', {
+        props: ['username','email','isloggedin'],
         data: function () {
             return {
+
             }
         },
-        template: '<div class="chat" @click="$emit(\'click-id\')"><el-row><el-col :span="6"><el-avatar class="avatar" :src="avatar"></el-avatar></el-col><el-col :span="18"><el-row style="margin-top: 3px;"><el-col :span="18"><label class="name">{{name}}</label></el-col><el-col :span="6"><label class="last-chat-time">{{time}}</label></el-col></el-row><el-row><el-col :span="24"><label class="last-chat-content">{{content}}</label></el-col></el-row></el-col></el-row></div>',
+        template: '<div @click="$emit(\'chat\')">'
+        + '<el-row>'
+        + '<el-col :span="8"><label>{{username}}</label></el-col>'
+        + '<el-col :span="8"><label>{{email}}</label></el-col>'
+        + '<el-col :span="8" v-if="isloggedin"><label>on line</label></el-col>'
+        + '<el-col :span="8" v-else><label>off line</label></el-col>'
+        + '</el-row>'
+        + '</div>',
         methods: {
         }
     }),
-        Vue.component('single-chat-panel', {
+    Vue.component('single-chat', {
+            props: ['id', 'avatar', 'name', 'time', 'content'],
+            data: function () {
+                return {
+                }
+            },
+            template: '<div class="chat" @click="$emit(\'click-id\')"><el-row><el-col :span="6"><el-avatar class="avatar" :src="avatar"></el-avatar></el-col><el-col :span="18"><el-row style="margin-top: 3px;"><el-col :span="18"><label class="name">{{name}}</label></el-col><el-col :span="6"><label class="last-chat-time">{{time}}</label></el-col></el-row><el-row><el-col :span="24"><label class="last-chat-content">{{content}}</label></el-col></el-row></el-col></el-row></div>',
+            methods: {
+            }
+        }),
+    Vue.component('single-chat-panel', {
             props: ['chat'],
             data: function () {
                 return {
@@ -56,7 +89,7 @@
                 }
             }
         }),
-        Vue.component('single-message-from-object', {
+    Vue.component('single-message-from-object', {
             props: ['avatar', 'time', 'content'],
             data: function () {
                 return {
@@ -64,7 +97,7 @@
             },
             template: '<div class="message-from-object"><el-row style="margin-top: 20px;"><el-col :span="1" style="margin-right: 10px; margin-top: 2px;"><el-avatar :src="avatar"></el-avatar></el-col><el-col :span="10"><el-card shadow="always"><label>{{content}}</label><label style="font-size: 12px; float: right; margin-top: 10px;">{{time}}</label></el-card></el-col></el-row></div>'
         }),
-        Vue.component('single-message-from-self', {
+    Vue.component('single-message-from-self', {
             props: ['avatar', 'time', 'content'],
             data: function () {
                 return {
@@ -73,10 +106,31 @@
             template: '<div class="message-from-self"><el-row style="margin-top: 20px;"><el-col :span="10" :offset="12"><el-card shadow="always"><label style="width: 50px;">{{content}}</label><label style="font-size: 12px; float: right; margin-top: 10px;">{{time}}</label></el-card></el-col><el-col :span="1" style="margin-left: 10px; margin-top: 2px;"><el-avatar :src="avatar"></el-avatar></el-col></el-row></div>'
         }),
 
-        new Vue({
+    new Vue({
             el: '#app',
             data: function() {
                 return {
+                    searchUserForm: {
+                        display: false,
+                        searchField: "",
+                        usersdata:[{
+                            username: 'lotuny',
+                            email: 'lee.lotuny@gmail.com',
+                            isLoggedIn: true
+                        },{
+                            username: 'lotuny',
+                            email: 'lee.lotuny@gmail.com',
+                            isLoggedIn: false
+                        },{
+                            username: 'lotuny',
+                            email: 'lee.lotuny@gmail.com',
+                            isLoggedIn: false
+                        },{
+                            username: 'lotuny',
+                            email: 'lee.lotuny@gmail.com',
+                            isLoggedIn: true
+                        }],
+                    },
                     websocket: null,
                     request: "",
                     response: "",
@@ -213,7 +267,12 @@
                                 }
                             }
                         }
-                    }
+                    },
+                    dialogVisible: false,
+                    form: {
+                        searchField: ''
+                    },
+                    formLabelWidth: '120px',
                 }
             },
             mounted() {
@@ -302,6 +361,18 @@
                     }
                     //Todo: animation: slide down to the new message
                 },
+                searchHistory : function (searchField) {
+
+                },
+                showSearchPanel : function () {
+                    this.searchUserForm.display = true;
+                },
+                closeSearchPanel : function () {
+                    this.searchUserForm.display = false;
+                },
+                chatwith : function (username) {
+                    <!--Todo: create a new chat panel-->
+                },
                 searchUsers : function (searchField) {
                     this.request = "{\n" +
                         "type: \"SEARCHCONTACTS\",\n" +
@@ -314,6 +385,13 @@
 </script>
 
 <style>
+    #main-panel {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
     #self-info {
 
     }
@@ -338,6 +416,18 @@
     #text-panel {
         background-color: #FBFDFF;
         margin-top: 20px;
+    }
+
+    #add {
+        margin-left: 70px;
+        text-align: center;
+        font-size: 40px;
+        color: #F0F0F0;
+    }
+
+    #add:hover {
+        color: #FFFFFF;
+        cursor: pointer;
     }
 
     .chat {
@@ -399,6 +489,51 @@
         height: 600px;
         width: 1300px;
         margin-bottom: 40px;
+    }
+
+    #mask {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        background-color: #000000;
+        opacity: 0.5;
+    }
+
+    #searchUserPanel {
+        border-radius: 10px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 800px;
+        height: 500px;
+        background-color: #FFFFFF;
+    }
+
+    #searchResults {
+        border-radius: 5px;
+        overflow: auto;
+        margin-top: 20px;
+        margin-left: 50px;
+        padding: 10px 10px;
+        width: 700px;
+        height: 300px;
+        background-color: #F2F8FE;
+    }
+
+    .single-user-info {
+        border-radius: 10px;
+        margin-top: 5px;
+        height: 60px;
+        padding-top: 30px;
+        text-align: center;
+    }
+
+    .single-user-info:hover {
+        background: #D5F3EF;
+        cursor: pointer;
     }
 </style>
 </html>
