--- a/Android/app/src/main/res/layout/new_chat_layout.xml
+++ b/Android/app/src/main/res/layout/new_chat_layout.xml
@@ -6,14 +6,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".NewChat">
 
     <ListView
         android:id="@+id/displayUsersFoundList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@id/SearchUsersBox"
-         />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/SearchUsersBoxDelimiter"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1."/>
 
     <TextView
         android:id="@+id/searchUsersSuggestiveTextView"
@@ -30,8 +33,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Delimiter between RecyclerView and Msg Box -->
+    <!-- Delimiter between ListView and Msg Box -->
     <View
+        android:id="@+id/SearchUsersBoxDelimiter"
         android:layout_width="0dp"
         android:layout_height="5dp"
         android:background="#dfdfdf"
